<resources>
    <string name="app_name">Lab02</string>

    <string name="bem_vindo">Bem Vindo ao Android!</string>
    <string name="action_settings">Settings</string>
    <string name="despor">Desenvolvido por Natalia Quintanilha</string>
    <string name="entrar">Entrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="login">Login</string>
    <string name="senha">Senha</string>
</resources>
